Listo la carpeta partials con todo lo necesario! quedo josha!

--- a/views/sobrenosotros.ejs
+++ b/views/sobrenosotros.ejs
@@ -1,149 +1,19 @@
 <!doctype html>
 <html class="no-js" lang="ES">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>WASSER AR/About us</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="stylesheets/img/favicon.ico">
+<head> 
+<title>WASSER/About us</title>
+<%- include('./partials/head') %>     
+</head>    
 
-	<!-- CSS here -->
-	<link rel="stylesheet" href="stylesheets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="stylesheets/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="stylesheets/css/slicknav.css">
-    <link rel="stylesheet" href="stylesheets/css/flaticon.css">
-    <link rel="stylesheet" href="stylesheets/css/progressbar_barfiller.css">
-    <link rel="stylesheet" href="stylesheets/css/gijgo.css">
-    <link rel="stylesheet" href="stylesheets/css/animate.min.css">
-    <link rel="stylesheet" href="stylesheets/css/animated-headline.css">
-	<link rel="stylesheet" href="stylesheets/css/magnific-popup.css">
-	<link rel="stylesheet" href="stylesheets/css/fontawesome-all.min.css">
-	<link rel="stylesheet" href="stylesheets/css/themify-icons.css">
-	<link rel="stylesheet" href="stylesheets/css/slick.css">
-	<link rel="stylesheet" href="stylesheets/css/nice-select.css">
-	<link rel="stylesheet" href="stylesheets/css/style.css">
-</head>
-<body><!-- Preloader Start -->
-       <div id="preloader-active">
-        <div class="preloader d-flex align-items-center justify-content-center">
-            <div class="preloader-inner position-relative">
-                <div class="preloader-circle"></div>
-                <div class="preloader-img pere-text">
-                    <img src="stylesheets/img/logo/loder.png" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
+<body>
+  <%- include('./partials/preloader') %>
+
+<header>
+  <%- include('./partials/header') %>
+</header>
     
-    <header>
-        <!-- Header Start -->
-        <div class="header-area">
-            <div class="main-header ">
-                <div class="header-top d-none d-lg-block">
-                    <div class="container">
-                        <div class="col-xl-12">
-                            <div class="row d-flex justify-content-between align-items-center">
-                             </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="header-bottom header-sticky">
-                    <div class="container">
-                        <div class="row align-items-center">
-                            <!-- Logo -->
-                            <div class="col-xl-2 col-lg-2">
-                                <div class="logo">
-                                    <a href="/"><img src="stylesheets/img/logo/logo.png" alt=""></a>
-                                </div>
-                            </div>
-                            
-                            
-                           
-                         
-                            <div class="col-xl-9 col-lg-8">
-                                <div class="menu-wrapper  d-flex align-items-center">
-                                    <!-- Main-menu -->
-                                    <div class="main-menu d-none d-lg-block">
-                                        <nav> 
-                                            
-                                            <ul id="navigation">    
-                                                                                                                                     
-                                                 <li><a href="/iniciarsesion">Cuenta</a>
-                                                    <ul class="submenu">
-                                                        <li><a href="/registro">Registrarse</a></li>
-                                                        <li><a href="/iniciarsesion">Ingresar</a></li>
-                                                    </ul>
-                                                </li>
-                                               
-                                               
-                                                <li><a href="/categoria">Categorias</a>
-                                                    <ul class="submenu">
-                                                        <li><a href="/catebanio">Griferia Baño</a></li>
-                                                        <li><a href="/catecocina">Griferia Cocina</a></li>
-                                                        <li><a href="/bachas">Bachas</a></li>
-                                                        <li><a href="/sanitarios">Sanitarios</a></li>
-                                                        <li><a href="/banieras">Bañeras y Duchas</a></li>
-                                                        <li><a href="/accesorios">Accesorios varios</a></li>
-                                                        <li><a href="/categoria">ver todas</a></li>
-                                                    </ul>
-                                                </li>
-                                            
-
-                                                    <li><a  id="navbarDropdown3" role="button" href="/carrito"
-                                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-shopping-cart"></i>Carrito</a>
-                                                        <ul class="submenu">
-                                                            
-                                                            <li><a href="/producto">item 1</a></li>
-                                                            <li><a href="/producto">item 2</a></li>
-                                                            <li><a href="/producto">item 3</a></li>
-                                                            <li><a href="/carrito">IR AL CARRITO</a></li>
-                                                        </ul>
-                                                    </li>
-                                                    <!-- Search Box -->                            
-                                                    <li class="search-switch">
-                                                       <a ><i class="fas fa-search" > </i></a></li>
-                                               
-                                                   </li> 
-                                                
-                                                   <li><a href="https://www.instagram.com/wasser.arg/"><i class="fab fa-instagram" ></i></a></li>
-                                                <li><a href="/error"><i class="fab fa-facebook-f"></i></a></li>
-                                                <li><a  href="/error"><i  class="fas fa-phone"></i></a></li>
-                                              
-
-                                                
-                                                
-                                                    
-                                                
-                                                    
-                                                        
-                                            </ul>
-                                            
-                                        </nav>
-                                    </div>
-                                </div>
-                            </div> 
-                            
-                                
-                            
-                            <!-- Mobile Menu -->
-                            <div class="col-12">
-                                <div class="mobile_menu d-block d-lg-none"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Header End -->
-    </header>
     <main>
-        <!--? slider Area Start-->
-        
-        
-        <!--? Gallery Area Start -->
-        <div class="gallery-area">
+         <div class="gallery-area">
             <div class="container-fluid p-0 fix">
                 <div class="row no-gutters">
                     <div class="col-xl-4 col-lg-4 col-md-6">
@@ -188,96 +58,11 @@
             </div>
         </div>
         <!-- Gallery Area End -->
-        </main>
+</main>
 <footer>
-                                
-                          </footer>
-                            
-    <!-- search model begin -->
-    <div class="search-model-box" style="display: none;">
-        <div class="h-100 d-flex align-items-center justify-content-center">
-            <div class="search-close-btn">+</div>
-            <form class="search-model-form">
-                <input type="text" id="search-input" placeholder="Qué buscas?">
-            </form>
-        </div>
-    </div>              
-     <!-- Search model end -->   
-    <!-- Scroll Up -->
-    <div id="back-top" >
-        <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
-    </div>
-    <footer>
-        <div class="container">    
-            <div class="row">
-              <div class="col-sm-12">
-                
-                <div class="footer">
-                    <br>
-                    <h2>Wasser, ¡los mejores precios encontralos aqui!</h2>
-                    <br>
-    
-                
-                    
-                </div>
-    
-                <div class="footer">
-                    <h4>Saber mas</h4>
-                    <ul class="footer_list">
-                      <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
-                      <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
-                      <li><a href="/error">FAQ</a></li>
-                      <li><a href="/error">Nuestras Oficinas</a></li>
-    
-                    </ul>
-                   
-                  </div> 
-                  <br>
-                  <h2>Subscribite para recibir las mejores ofertas!</h2>
-                  <div class="hero-cta__input"> <input type="email" name="data[email]" required="" id="hero-cta-email" placeholder="Ingrese su Email aqui"></div> <button type="submit" class="emailsignup">Subscribirme</button></div>
-                  <br>
-                  <br>
-    
-                  
-    
-    
-              </div>
-              <br>
-            </div>
-          </div>
-    </footer>
-    <!-- JS here -->
-
-    <script src="stylesheets/js/vendor/modernizr-3.5.0.min.js"></script>
-    <!-- Jquery, Popper, Bootstrap -->
-    <script src="stylesheets/js/vendor/jquery-1.12.4.min.js"></script>
-    <script src="stylesheets/js/popper.min.js"></script>
-    <script src="stylesheets/js/bootstrap.min.js"></script>
-    <!-- Jquery Mobile Menu -->
-    <script src="stylesheets/js/jquery.slicknav.min.js"></script>
-
-    <!-- Jquery Slick , Owl-Carousel Plugins -->
-    <script src="stylesheets/js/owl.carousel.min.js"></script>
-    <script src="stylesheets/js/slick.min.js"></script>
-    <!-- One Page, Animated-HeadLin -->
-    <script src="stylesheets/js/wow.min.js"></script>
-    <script src="stylesheets/js/animated.headline.js"></script>
-    <script src="stylesheets/js/jquery.magnific-popup.js"></script>
-
-    
-    
-    <!-- counter , waypoint,Hover Direction -->
-    <script src="stylesheets/js/jquery.counterup.min.js"></script>
-    <script src="stylesheets/js/waypoints.min.js"></script>
-    <script src="stylesheets/js/jquery.countdown.min.js"></script>
-    <script src="stylesheets/js/hover-direction-snake.min.js"></script>
-
-
-    
-    <!-- Jquery Plugins, main Jquery -->	
-    <script src="stylesheets/js/plugins.js"></script>
-    <script src="stylesheets/js/main.js"></script>
-
-    
-    </body>
+    <%- include('./partials/footer') %>
+</footer>           
+    <%- include('./partials/scripts') %>  
+</body>
 </html>
+        
