--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,37 +1,41 @@
-<div class="container">    
-    <div class="row">
-      <div class="col-sm-12">
-        
-        <div class="footer">
-            <br>
-            <h2>Wasser, ¡los mejores precios encontralos aqui!</h2>
-            <br>
-
-        
-            
-        </div>
-
-        <div class="footer">
-            <h4>Saber mas</h4>
-            <ul class="footer_list">
-              <li><a href="/sobrenosotros">Sobre Nosotros</a></li>
-              <li><a href="https://www.instagram.com/wasser.arg/">Contactanos</a></li>
-              <li><a href="/error">FAQ</a></li>
-              <li><a href="/error">Nuestras Oficinas</a></li>
-
-            </ul>
-           
-          </div> 
-          <br>
-          <h2>Subscribite para recibir las mejores ofertas!</h2>
-          <div class="hero-cta__input"> <input type="email" name="data[email]" required="" id="hero-cta-email" placeholder="Ingrese su Email aqui"></div> <button type="submit" class="emailsignup">Subscribirme</button></div>
-          <br>
-          <br>
-
-          
-
-
+<footer>
+  <div class="footer" id="footer">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                  <h4> Wasser  </h4>
+              </div>
+              <div class="col-lg-3 col-sm-2 col-xs-3">
+                  <h3> Contactanos </h3>
+                  <ul>
+                      <li><a class="email"href="#"> WasserGriferias@Outlook.com </a></li>
+                      <br/>
+                      <li> <p> Wpp </p> </li>
+                      <li> <p> Wpp 2 </p> </li>
+                  </ul>
+              </div>
+              <div class="col-lg-3 col-sm-2 col-xs-3">
+                  <ul>
+                      <li> <h5> <a href="../sobrenosotros.ejs" style="margin-top: 2em"> Sobre Nosotros</a> <h5></li>
+                      <li> <h5><a href="#"> FAQ </a> <h5></li>
+                        <!-- aca abajo poner un mapita para nuestras oficinas-->
+                      <li> <h5><a href="#"> Nuestras Oficinas </a> <h5></li>
+                      <li> <h5><a href="#"> Saber Mas </a> <h5></li>
+                  </ul>
+              </div>
+             
+          <!--/.row--> 
       </div>
-      <br>
-    </div>
+      <!--/.container--> 
   </div>
+  <!--/.footer-->
+                        
+  <div class="footer-bottom">
+      <div class="container">
+          <p class="pull-left copyright"> Copyright © wASSER 2020. Todos los derechos reservados. </p>
+     
+      </div>
+  </div>
+  <!--/.footer-bottom--> 
+
+</footer>
