--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -20,4 +20,5 @@
 	<link rel="stylesheet" href="stylesheets/css/themify-icons.css">
 	<link rel="stylesheet" href="stylesheets/css/slick.css">
 	<link rel="stylesheet" href="stylesheets/css/nice-select.css">
-	<link rel="stylesheet" href="stylesheets/css/style.css">
+    <link rel="stylesheet" href="stylesheets/css/style.css">
+    <link rel="stylesheet" href="stylesheets/css/producto1.css">
