--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -33,7 +33,7 @@
           <!-- /.col-lg-8 -->
           <div class="col-lg-6">
             <h1 class="font-weight-light">Grifo de cocina monocomando Piazza Emblem 10012 cromo cromado</h1>
-            <h2>$2.729</h2>
+            <h2><%=productos.price%> </h2>
             <label for="cantidad"><b>Color: </b></label>
             <select name="cantidad" id="cantidad">
                 <option value="">Seleccione un color </option>
