--- a/views/EditarProducto.ejs
+++ b/views/EditarProducto.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="ES">
 <head> 
-    <title>WASSER/publica!</title>
+    <title>WASSER/EDITAR</title>
     <%- include('./partials/head') %> 
 </head>
   
