arregle el tema de las fotos, quedan detalles

--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -27,7 +27,7 @@
         
       <div class="col-lg-6">
         
-              <img src="<%- producto.image %>" class="d-block w-100" alt="...">
+        <img src="/images/imagenProducto/<%=producto.image %> " class="img-responsive" style="width:100%" alt="Image"></a>
             
         </div>
       
