--- a/views/PRODUCTOS.ejs
+++ b/views/PRODUCTOS.ejs
@@ -21,7 +21,7 @@
           <div class="col-sm-3">
             <div class="panel panel-primary">
               <div class="panel-heading"><%- producto.name %>  </div>
-              <div class="panel-body"><a href="/productos/<%= producto.category %>/<%= producto.id %>"><img src="<%- producto.image %> " class="img-responsive" style="width:100%" alt="Image"></a></div>
+              <div class="panel-body"><a href="/productos/<%= producto.category %>/<%= producto.id %>"><img src="/images/imagenProducto/<%=producto.image %> " class="img-responsive" style="width:100%" alt="Image"></a></div>
               <div class="panel-footer">$<%- producto.price %> </div>
               <div class="d-flex justify-content-end">
                 
