--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,20 +12,20 @@
 </header>
 
     <main>
-        <!--? slider Area Start-->
+        
         <div class="slider-area position-relative">
             <div class="slider-active">
-                <!-- Single Slider -->
+              
                 <div class="single-slider slider-height d-flex align-items-center">
                     <div class="container">
                         <div class="row">
                             <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
                                 
                                 <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>compra!</span></h1>
-                                    <p data-animation="fadeInLeft" data-delay="0.4s">Encontra lo que buscas entre miles de productos nuevos y usados!</p>
+                                    <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>Los mejores en griferia</span></h1>
+                                    <p data-animation="fadeInLeft" data-delay="0.4s">Encontra la mejor calidad en griferia para tu casa!</p>
                                     
-                                    <a href="/registro" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Registrate!</a><br>
+                                    
                                     <p2>Desliza hacia la izquierda...</p2>
                                    
                                 </div>
@@ -33,15 +33,14 @@
                         </div>
                     </div>          
                 </div>
-                <!-- Single Slider -->
                 <div class="single-slider slider-height d-flex align-items-center">
                     <div class="container">
                         <div class="row">
                             <div class="col-xl-7 col-lg-9 col-md-8 col-sm-9">
                                 <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>Publica y vende!</span></h1>
-                                    <p data-animation="fadeInLeft" data-delay="0.4s">Publica y vende tus productos de griferia nuevos o usados!</p>
-                                    <a href="/carga" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Publica!<i class="ti-arrow-right"></i></a><br>
+                                    <h1 data-animation="fadeInLeft" data-delay="0.2s"><span>Convertite en un POWERWASSER!</span></h1>
+                                    <p data-animation="fadeInLeft" data-delay="0.4s">Registrate ahora y recibi un cupon del 10%</p>
+                                    <a href="/carga" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">comenzar<i class="ti-arrow-right"></i></a><br>
                                     <p2>Desliza hacia la izquierda...</p2>
                                 </div>
                             </div>
@@ -51,9 +50,7 @@
             </div>
             
         </div>
-        <!-- slider Area End-->
-        
-        <!--? Gallery Area Start -->
+     
         <div class="gallery-area">
             <div class="container-fluid p-0 fix">
                 <div class="row no-gutters">
@@ -64,7 +61,7 @@
                                 <div class="thumb-content">
                                     <h3>Todo para tu baño</h3>
                                     <p>Queres renovar tu cuarto de baño o ya lo hiciste y no sabes que hacer con los viejos artefactos? visita la categoria y compra y vende TODO!</p>
-                                    <a href="/catebanio">Categoria Baño</a>
+                                    <a href="/productos/baño">Categoria Baño</a>
                                 </div>
                             </div>
                         </div>
@@ -76,7 +73,7 @@
                                 <div class="thumb-content">
                                     <h3>Todo Para tu cocina</h3>
                                     <p>La griferia que siempre soñaste para tu cocina con una pequeña variedad de artefactos para acompañar! Tambien si tenes algo que te sobre lo podes publicar!</p>
-                                    <a href="/catecocina">Categoria Cocina</a>
+                                    <a href="/productos/cocina">Categoria Cocina</a>
                                 </div>
                             </div>
                         </div>
@@ -86,9 +83,9 @@
                             <div class="gallery-img" style="background-image: url(stylesheets/img/gallery/gallery3.png);"></div>
                             <div class="thumb-content-box">
                                 <div class="thumb-content">
-                                    <h3>Griferia General</h3>
-                                    <p>No dejes de visitar todas nuestras categorias para encontrar el producto que más se adapte a tus necesidades!</p>
-                                    <a href="/categoria">Todas las categorias</a>
+                                    <h3>Pasando a ver?</h3>
+                                    <p>Podes ver todos los productos de wasser en un solo lugar sin necesidad de pasarte una por una las categorias</p>
+                                    <a href="/productos">Todas los productos</a>
                                 </div>
                             </div>
                         </div>
@@ -96,7 +93,7 @@
                 </div>
             </div>
         </div>
-      
+    
         </main>
 
     <footer>
