--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,21 +3,21 @@
    
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="stylesheets/img/favicon.ico">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="shortcut icon" type="image/x-icon" href="/stylesheets/img/favicon.ico">
     <!-- CSS here -->
     <link rel="stylesheet" href="/stylesheets/css/registro.css">
-	<link rel="stylesheet" href="stylesheets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="stylesheets/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="stylesheets/css/slicknav.css">
-    <link rel="stylesheet" href="stylesheets/css/flaticon.css">
-    <link rel="stylesheet" href="stylesheets/css/progressbar_barfiller.css">
-    <link rel="stylesheet" href="stylesheets/css/gijgo.css">
-    <link rel="stylesheet" href="stylesheets/css/animate.min.css">
-    <link rel="stylesheet" href="stylesheets/css/animated-headline.css">
-	<link rel="stylesheet" href="stylesheets/css/magnific-popup.css">
-	<link rel="stylesheet" href="stylesheets/css/fontawesome-all.min.css">
-	<link rel="stylesheet" href="stylesheets/css/themify-icons.css">
-	<link rel="stylesheet" href="stylesheets/css/slick.css">
-	<link rel="stylesheet" href="stylesheets/css/nice-select.css">
-	<link rel="stylesheet" href="stylesheets/css/style.css">
+	<link rel="stylesheet" href="/stylesheets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/stylesheets/css/owl.carousel.min.css">
+	<link rel="stylesheet" href="/stylesheets/css/slicknav.css">
+    <link rel="stylesheet" href="/stylesheets/css/flaticon.css">
+    <link rel="stylesheet" href="/stylesheets/css/progressbar_barfiller.css">
+    <link rel="stylesheet" href="/stylesheets/css/gijgo.css">
+    <link rel="stylesheet" href="/stylesheets/css/animate.min.css">
+    <link rel="stylesheet" href="/stylesheets/css/animated-headline.css">
+	<link rel="stylesheet" href="/stylesheets/css/magnific-popup.css">
+	<link rel="stylesheet" href="/stylesheets/css/fontawesome-all.min.css">
+	<link rel="stylesheet" href="/stylesheets/css/themify-icons.css">
+	<link rel="stylesheet" href="/stylesheets/css/slick.css">
+	<link rel="stylesheet" href="/stylesheets/css/nice-select.css">
+	<link rel="stylesheet" href="/stylesheets/css/style.css">
