--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,34 +1,3 @@
-<!doctype html>
-<html class="no-js" lang="ES">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>OOPS!</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="image/x-icon" href="stylesheets/img/favicon.ico">
-
-
-<div class="container">    
-    <div class="row">
-    
-      <div class="col-sm-12">
-        
-        <ul id="navigation">    
-                                                                                                                                     
-            <li>
-                <p2>Oops! Algo salio mal! El equipo de Wasser esta trabajando duro para solucionarlo! </p2>
-                <a href="/">volver a WASSER</a></li>
-        </ul>
-        
-
-        <div class="panel-body"><img src="https://www.readersdigest.ca/wp-content/uploads/2020/04/GettyImages-916511842-1.jpg" class="img-responsive"  style="width:60%" alt="Image"></div>
-      
-    </div>
-    </div>
-  </div>
-
-
-</head>
-</html>
+<h1><%= message %></h1>
+<h2><%= error.status %></h2>
+<pre><%= error.stack %></pre>
