--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,7 @@
                             <!-- Logo -->
                             <div class="col-xl-2 col-lg-2">
                                 <div class="logo">
-                                    <a href="/"><img src="stylesheets/img/logo/logo.png" alt=""></a>
+                                    <a href="/"><img src="/stylesheets/img/logo/logo.png" alt=""></a>
                                 </div>
                             </div>
                             
@@ -39,13 +39,13 @@
                                                
                                                 <li><a href="/categoria">Categorias</a>
                                                     <ul class="submenu">
-                                                        <li><a href="/catebanio">Griferia Baño</a></li>
-                                                        <li><a href="/catecocina">Griferia Cocina</a></li>
-                                                        <li><a href="/bachas">Bachas</a></li>
-                                                        <li><a href="/sanitarios">Sanitarios</a></li>
-                                                        <li><a href="/banieras">Bañeras y Duchas</a></li>
-                                                        <li><a href="/accesorios">Accesorios varios</a></li>
-                                                        <li><a href="/categoria">ver todas</a></li>
+                                                        <li><a href="/productos/baño">Griferia Baño</a></li>
+                                                        <li><a href="/productos/cocina">Griferia Cocina</a></li>
+                                                        <li><a href="/productos/bachas">Bachas</a></li>
+                                                        <li><a href="/productos/sanitarios">Sanitarios</a></li>
+                                                        <li><a href="/productos/banieras">Bañeras y Duchas</a></li>
+                                                        <li><a href="/productos/accesorios">Accesorios varios</a></li>
+                                                        <li><a href="/productos">ver todos</a></li>
                                                     </ul>
                                                 </li>
                                             
