--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -1,20 +1,19 @@
-
 <!doctype html>
 <html class="no-js" lang="ES">
-<head><title>WASSER/Producto</title>
-  <%- include('./partials/head') %>     
-</head>    
+
+<%- include('./partials/head') %>     
 
 <body>
-  <%- include('./partials/preloader') %>
 
-<header>
-  <%- include('./partials/header') %>
-</header> 
+<%- include('./partials/preloader') %>
+
+<%- include('./partials/header') %>
 
 <main>
+  
   <div class="container">    
     <div class="row">
+           
       <div class="col-sm-12">
         <div class="panel-body"><a href=""><img src="/stylesheets/img/categoria/espacio1.png" class="img-responsive" style="width:100%" alt="Image"></a></div>
       </div>
@@ -24,27 +23,26 @@
   
   <div class="container">    
     <div class="row">
+      <% producto.forEach(producto => { %>
+        
       <div class="col-lg-6">
         
-              <img src="/stylesheets/img/items/piazza emblen2.png" class="d-block w-100" alt="...">
+              <img src="<%- producto.image %>" class="d-block w-100" alt="...">
             
         </div>
       
           <!-- /.col-lg-8 -->
           <div class="col-lg-6">
-            <h1 class="font-weight-light">Grifo de cocina monocomando Piazza Emblem 10012 cromo cromado</h1>
-            <h2>$2.729</h2>
+            <h1 class="font-weight-light"><%- producto.name %></h1>
+            <h2>$<%- producto.price %></h2>
             <label for="cantidad"><b>Color: </b></label>
             <select name="cantidad" id="cantidad">
                 <option value="">Seleccione un color </option>
-                <option value="1">Plateado</option>
-                <option value="2">Dorado</option>
-                <option value="3">Negro</option>
+                <option value="1"><%- producto.colors %></option>
+                <option value="2"><%- producto.colors2 %></option>
+                <option value="3"><%- producto.colors3 %></option>
             </select>
-            <p>Diseño de vanguardia, funcional y práctico El control monocomando es un sistema moderno, durable y de fácil instalación. 
-            
-              Consumo inteligente
-              Con tecnología de avanzada, este grifo incorpora un cierre cerámico, que ayuda a reducir el consumo de agua y requiere un mínimo mantenimiento. Cuidá tu economía y colaborá con el cuidado del ambiente.</p>
+            <p><%- producto.description %></p>
             <label for="cantidad"><b>cantidad: </b></label>
             <select name="cantidad" id="cantidad">
                 <option value="">Seleccione cantidad</option>
@@ -52,6 +50,7 @@
                 <option value="1">2</option>
                 <option value="1">3</option>
             </select>
+            
               <div class="container">    
     <div class="row">
       <div class="col-sm-12">
@@ -68,6 +67,7 @@
           <div class="row">
             <div class="col-sm-12">
               <a class="btn2 btn-primary" href="/carrito">Añadir al carrito</a>
+              
             </div>
           </div>
         </div>
@@ -80,7 +80,7 @@
         </div>
 
         <!-- Call to Action Well -->
-        <h3>Descripcion Tecnica</h3>
+        <h3>Te puede interesar</h3>
         <div class="container">
           <h3 class="font-weight-light"> 
             </h3>
@@ -93,46 +93,17 @@
 
      
         <!-- Content Row -->
-        <div class="row">
-          <div class="col-md-4 mb-5">
-            <div class="card h-100">
-              <div class="card-body">
-                <h2 class="card-title">Caracteristicas principales</h2>
-                <p class="card-text">
-                  <p>	Piazza</p>
-                  <p>Línea: Emblem</p>
-                  <p>Modelo:	10012</p>
-                <p>Color:	Cromo</p>
-                  <p>Acabado:	Cromado</p>
-              </div>
-              
-            </div>
-          </div>
-          <!-- /.col-md-4 -->
-          <div class="col-md-4 mb-5">
-            <div class="card h-100">
-              <div class="card-body">
-                <h2 class="card-title">Otras Caracteristicas</h2>
-                <p class="card-text">
-                  <p> de control de la canilla: Monocomando</p>
-                  <p>Materiales: Metal</p>
-                  <p>Lugar de colocación: Mesada</p>
-                  <p>Incluye aireador: Sí</p>
-                  
-              </div>
-              
-            </div>
-          </div>
-          <!-- /.col-md-4 -->
+        
           
             <div class="col-md-4 mb-2">
               <div class="card h-100">
                 <div class="card-body">
                   <h2 class="card-title">Tambien puede interesarte</h2>
-                  <a href="/producto"><img src="https://http2.mlstatic.com/griferia-canilla-monocomando-lavatorio-de-bano-fiting-shop-D_NQ_NP_848355-MLA40290886792_122019-F.webp" class="img-responsive" style="width:100%" alt="Image"></a>
+                  
+                  <a href="/productos/<%= producto.category %>/<%- producto.id +1 %>"><img src="<%- producto.next %>" class="img-responsive" style="width:100%" alt="Image"></a>
                   </div>
               </div>
-          
+              <% }) %>
                 
               </div>
             </div>
@@ -144,12 +115,40 @@
         <!-- /.row -->
     
       </div>
-  </main>
-  <footer>
-        <%- include('./partials/footer') %>
-  </footer>           
-        <%- include('./partials/scripts') %>  
-  </body>
-  </html>
+
+
+
+</main>
+
+<footer>
+    <%- include('./partials/footer') %>
+</footer>           
+    <%- include('./partials/scripts') %>  
+</body>
+</html>
+
+
+
+
+
+
+<!--<div class="container">    
+    <div class="row">
+      <% producto.forEach(producto => { %>            
+        <div class="col-sm-3">
+          <div class="panel panel-primary">
+            <div class="panel-heading"><%- producto.name %>  </div>
+            <div class="panel-body"><a href="/productos/<%= producto.category %>/<%= producto.id %>"><img src="<%- producto.image %> " class="img-responsive" style="width:100%" alt="Image"></a></div>
+            <div class="panel-footer">$<%- producto.price %> </div>
+            <div class="d-flex justify-content-end">
+             
+          </div>    
+            <div class="panel-footer">.</div>
+          </div>
+        </div>
+          <% }) %>
+     </div>
+  </div>     
       
-     
+      
+     -->
