--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,41 +1,13 @@
 <footer>
-  <div class="footer" id="footer">
+
+ 
+  
+
       <div class="container">
-          <div class="row">
-              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                  <h4> Wasser  </h4>
-              </div>
-              <div class="col-lg-3 col-sm-2 col-xs-3">
-                  <h3> Contactanos </h3>
-                  <ul>
-                      <li><a class="email"href="#"> WasserGriferias@Outlook.com </a></li>
-                      <br/>
-                      <li> <p> Wpp </p> </li>
-                      <li> <p> Wpp 2 </p> </li>
-                  </ul>
-              </div>
-              <div class="col-lg-3 col-sm-2 col-xs-3">
-                  <ul>
-                      <li> <h5> <a href="../sobrenosotros.ejs" style="margin-top: 2em"> Sobre Nosotros</a> <h5></li>
-                      <li> <h5><a href="#"> FAQ </a> <h5></li>
-                        <!-- aca abajo poner un mapita para nuestras oficinas-->
-                      <li> <h5><a href="#"> Nuestras Oficinas </a> <h5></li>
-                      <li> <h5><a href="#"> Saber Mas </a> <h5></li>
-                  </ul>
-              </div>
-             
-          <!--/.row--> 
-      </div>
-      <!--/.container--> 
-  </div>
-  <!--/.footer-->
-                        
-  <div class="footer-bottom">
-      <div class="container">
-          <p class="pull-left copyright"> Copyright © wASSER 2020. Todos los derechos reservados. </p>
+          <p class="pull-left copyright"> Copyright © WASSER 2020. Todos los derechos reservados.<a href="#"> Sobre Nosotros </a></li></p>
      
       </div>
-  </div>
+
   <!--/.footer-bottom--> 
 
 </footer>
