--- a/views/EditarProducto.ejs
+++ b/views/EditarProducto.ejs
@@ -58,9 +58,8 @@
       </div>
                    
       <div class="mt-5 mr-5 d-flex justify-content-center">
-        <a href="/productos" class="btn btn-outline-primary">Cancelar</a>
-      <button type="submit" class="btn btn-outline-primary">Guardar</button></div>
-
+        <button type="submit" class="btn btn-outline-primary">Guardar</button></div>
+        <p class="pull-left copyright backgroun"> <a href="/productos">Cancelar</a></li></p>
        
     </form>
     <% } %>
