--- a/views/agregar.ejs
+++ b/views/agregar.ejs
@@ -46,9 +46,11 @@
                    
       <div class="mt-5 mr-5 d-flex justify-content-center">
       <button type="submit" class="btn btn-outline-primary">Publicar</button></div>
-
+ <p class="pull-left copyright backgroun"> <a href="/productos">Cancelar</a></li></p>
      </form>      
+    
   </div>
+  
 
 </main>
 
