--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -45,7 +45,7 @@
                                                         <li><a href="/productos/sanitarios">Sanitarios</a></li>
                                                         <li><a href="/productos/banieras">Bañeras y Duchas</a></li>
                                                         <li><a href="/productos/accesorios">Accesorios varios</a></li>
-                                                        <li><a href="/productos">ver todos</a></li>
+                                                        <li><a href="/productos">vista Admin</a></li>
                                                     </ul>
                                                 </li>
                                             
