--- a/views/PRODUCTOS.ejs
+++ b/views/PRODUCTOS.ejs
@@ -23,7 +23,7 @@
               <div class="panel-heading"><%- producto.name %>  </div>
               <div class="panel-body"><a href="/productos/<%= producto.category %>/<%= producto.id %>"><img src="/images/imagenProducto/<%=producto.image %> " class="img-responsive" style="width:100%" alt="Image"></a></div>
               <div class="panel-footer">$<%- producto.price %> </div>
-              <div class="d-flex justify-content-end">
+              <div class="d-flex justify-content-center">
                 
            
                  
@@ -55,7 +55,10 @@
        </div>
     </div>  
  
-      
+    <div class="container">
+      <p class="pull-left copyright backgroun"> <a href="/productos/agregar">Agregar producto</a></li></p>
+ 
+  </div>
       
   </main>
   <footer>
