agregue mas productos

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -43,7 +43,7 @@
                                                         <li><a href="/productos/cocina">Griferia Cocina</a></li>
                                                         <li><a href="/productos/bachas">Bachas</a></li>
                                                         <li><a href="/productos/sanitarios">Sanitarios</a></li>
-                                                        <li><a href="/productos/banieras">Bañeras y Duchas</a></li>
+                                                        <li><a href="/productos/bañeras">Bañeras y Duchas</a></li>
                                                         <li><a href="/productos/accesorios">Accesorios varios</a></li>
                                                         <li><a href="/productos">vista Admin</a></li>
                                                     </ul>
