--- a/views/PRODUCTOS.ejs
+++ b/views/PRODUCTOS.ejs
@@ -1,7 +1,7 @@
 
 <!doctype html>
 <html class="no-js" lang="ES">
-<head><title>WASSER/Producto</title>
+<head><title>WASSER/Productos</title>
   <%- include('./partials/head') %>     
 </head>    
 
@@ -24,48 +24,45 @@
               <div class="panel-body"><a href="/productos/<%= producto.category %>/<%= producto.id %>"><img src="/images/imagenProducto/<%=producto.image %> " class="img-responsive" style="width:100%" alt="Image"></a></div>
               <div class="panel-footer">$<%- producto.price %> </div>
               <div class="d-flex justify-content-center">
-                
-           
-                 
-                  <form action="/productos/EditarProducto/<%= producto.id %>"  method="">
-                    <button class="">Editar</button>
-                  
-                  
-  
-                  </form>
-<br>
-
-                <form action="/productos/delete/<%= producto.id %>?_method=delete" method="POST">
-                  <button class="">Eliminar</button>
-                
-                
-
-                </form>
-            </div>    
+              <form action="/productos/EditarProducto/<%= producto.id %>"  method="">
+              <button class="">Editar</button> 
+              </form>
+              <br>
+              <form onclick="return confirm('Estas seguro que querés eliminaro el prodcuto?')" action="/productos/delete/<%= producto.id %>?_method=delete" method="POST">
+              <button class="">Eliminar</button>
+              </form>
+              </div>    
               <div class="panel-footer">
-                
-            
-              
+                .
               </div>
-            </div>
-          </div>
-    
-    
-            <% }) %>
-       </div>
-    </div>  
- 
-    <div class="container">
-      <p class="pull-left copyright backgroun"> <a href="/productos/agregar">Agregar producto</a></li></p>
- 
-  </div>
-      
-  </main>
+              </div>
+              </div>
+              <% }) %>
+              </div>
+              </div>  
+              <div class="container">
+              <p class="pull-left copyright backgroun"> <a href="/productos/agregar">Agregar producto</a></li></p>
+              </div>    
+  </main>           
   <footer>
         <%- include('./partials/footer') %>
   </footer>           
         <%- include('./partials/scripts') %>  
   </body>
-  </html>
+  </html>    
+  
+  
+                
+                
+            
+                
+            
+              
+              
+    
+    
+            
+ 
+
       
      
